# rgbcube.github.io

./: .gitattributes  .gitignore  .rustfmt.toml  404.html  Cargo.nix  Cargo.toml  README.md  build.rs  cube.css  cube.js  flake.nix  generate_sides.py  index.html
docs/: docs.html  index.html  search_index.js
docs/bonfire/: bonfire.html  bonfire.v.rest.ratelimit.html  index.html  search_index.js
docs/chatgpt/: chatgpt.html  index.html  search_index.js
docs/color/: color.html  index.html  search_index.js
docs/revolt/: index.html  revolt.html  search_index.js
src/: asset.rs  constants.rs  cube.rs  main.rs  page.rs
src/cube/: cube.css  mod.rs
src/minify/: css.rs  js.rs  mod.rs
src/page/: mod.rs
src/page/cube/: mod.rs
src/pages/: assets.rs  index.rs  mod.rs
src/pages/_404/: 404.css  mod.rs
src/pages/index/: mod.rs
src/routes/: assets.rs  mod.rs
src/routes/_404/: mod.rs
src/routes/index/: mod.rs
src/routes/not_found/: mod.rs
