[package]
name        = "site"
description = "RGBCube's homepage."
authors     = [ "RGBCube" ]
license     = "GPL"
version     = "0.1.0"
homepage    = "https://rgbcube.github.io"
repositoty  = "https://github.com/RGBCube/rgbcube.github.io"
edition     = "2021"

[dependencies]
anyhow       = "1.0.75"
dashmap      = "5.5.3"
embed        = { git = "https://github.com/RGBCube/embed-rs" }
env_logger   = "0.10.1"
log          = "0.4.20"
maud         = "0.25.0"
minify-js    = "0.5.6"
tar          = "0.4.40"
tokio        = { version = "1.35.1", features = [ "full" ] }
warp         = { version = "0.3.6", features = [ "async-compression" ] }

[build]
incremental = true
