[package]
name        = "site"
description = "The official website and link portal of RGBCube and his work."
authors     = [ "RGBCube" ]
license     = "GPL"
version     = "0.1.0"
homepage    = "https://rgbcube.github.io"
repositoty  = "https://github.com/RGBCube/rgbcube.github.io"
edition     = "2021"

[dependencies]
axum         = "0.7.2"
bytes        = "1.5.0"
cargo_toml   = "0.17.2"
dashmap      = "5.5.3"
embed        = { git = "https://github.com/RGBCube/embed-rs" }
env_logger   = "0.10.1"
log          = "0.4.20"
maud         = { git = "https://github.com/vidhanio/maud", branch = "patch-1" }
mime_guess   = "2.0.4"
minify-js    = "0.5.6"
tar          = "0.4.40"
tokio        = { version = "1.35.1", features = [ "full" ] }

[build]
incremental = true
